binary search time interval changed, undo and skip forward buttons commented!

--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -201,10 +201,10 @@
         </div>
 
         <div id="stepButtons" class="btn-group" role="group">
-            <button id="undo" type="button" class="btn btn-outline-secondary" disabled>Undo Step</button>
+            <!-- <button id="undo" type="button" class="btn btn-outline-secondary" disabled>Undo Step</button> -->
             <button id="pause" type="button" class="btn btn-outline-secondary" disabled>Pause</button>
             <button id="next" type="button" class="btn btn-outline-secondary" disabled>Next Step</button>
-            <button id="skipForward" type="button" class="btn btn-outline-secondary" disabled>Skip Forward</button>
+            <!-- <button id="skipForward" type="button" class="btn btn-outline-secondary" disabled>Skip Forward</button> -->
         </div>
     </div>
 
