--- a/HomeScreen.html
+++ b/HomeScreen.html
@@ -9,7 +9,6 @@
 
     <!--Favicon-->
     <link rel="icon" type="image/png" href="resources/logo.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Bootstrap required Libraries-->
 
@@ -20,9 +19,8 @@
     <meta name="author" content="">
 
     <!-- css sheet for how the page is laid out -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <!--Scripts for Modal-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -42,11 +40,14 @@
     </style>
     <!-- /Bootstrap required Libraries-->
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <!--MyCss-->
     <link rel="stylesheet" href="stylesheets/HomeScreen.css">
     <link rel="stylesheet" href="stylesheets/SnackBar.css">
     <link rel="stylesheet" href="stylesheets/Modal.css">
     <link rel="stylesheet" href="stylesheets/Slider.css">
+    <link rel="stylesheet" href="stylesheets/DragableContainer.css">
 </head>
 
 <body class="MainPageStyling">
@@ -107,8 +108,7 @@
                         </td>
                         <td>
                             <p>Development of an application for the Implemantation and use of search methods in a
-                                visualized
-                                enviroment
+                                visualized environment
                             </p>
                         </td>
                     </tr>
@@ -203,6 +203,8 @@
 
         <div id="stepButtons" class="btn-group" role="group">
             <!-- <button id="undo" type="button" class="btn btn-outline-secondary" disabled>Undo Step</button> -->
+            <button id="options" type="button" class="btn btn-outline-secondary"><i class="material-icons">settings</i>
+            </button>
             <button id="pause" type="button" class="btn btn-outline-secondary" disabled>Pause</button>
             <button id="next" type="button" class="btn btn-outline-secondary" disabled>Next Step</button>
             <button id="skipForward" type="button" class="btn btn-outline-secondary" disabled>Skip Forward</button>
@@ -216,12 +218,30 @@
     </div>
 
     <div id="table_container" class="container-fluid" align="center">
-
+        <!--This container handled in javascript-->
     </div>
 
-    <!--<div id="code_container" class="container-fluid" align="center">
+    <!--Draggable DIV:-->
+    <div id="dragable_container">
+        <!--Include a header DIV with the same name as the draggable DIV, followed by "header":-->
+        <div id="dragable_container_header">
+            <div id="collapse" class="float-left"><i id="collapse_icon" class="material-icons">expand_more</i></div>
+            <div id="collapse_right" class="float-left" hidden><i class="material-icons">chevron_right</i></div>
+            Click And Drag
+            <div class="float-right"><i class="material-icons right" style="font-size:24px">drag_handle</i></div>
+        </div>
+        <div id="dragable_container_content">
+            <div id="left_pane" class="split left">
+                <h4 id="search_title">Press a Search Button</h4>
+                <p id="manual">A manual for this search will appear hear</p>
+            </div>
 
-    </div>-->
+            <div id="right_pane" class="split right">
+                <h4>Step by Step</h4>
+                <p>You will see the steps of every search you run</p>
+            </div>
+        </div>
+    </div>
 
     <div id="snackbar">This message handled in javascript</div>
 
@@ -237,14 +257,14 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
 
 <!--http://chancejs.com for generate random numbers-->
@@ -261,6 +281,7 @@
 <script type="text/javascript" src="scripts/ExponentialSearch.js"></script>
 <script type="text/javascript" src="scripts/FibonacciSearch.js"></script>
 <script type="text/javascript" src="scripts/StepButtons.js"></script>
+<script type="text/javascript" src="scripts/DragableContainer.js"></script>
 
 </body>
 
