Manual completed only step by step remaining, display bugs and check to make the code better

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <!-- /Bootstrap required Libraries-->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 
     <!--MyCss-->
     <link rel="stylesheet" href="stylesheets/HomeScreen.css">
@@ -55,7 +56,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="HomeScreen.html">
+        <a class="navbar-brand" href="index.html">
             <img src="resources/logo1.png"/> Implementation and use of Search in Visualized Environment</a>
         <button id="navBar_toggler" class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive"
@@ -66,7 +67,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="HomeScreen.html">
+                    <a class="nav-link" href="index.html">
                         <img src="resources/ic_action_home.png"/> Home
                         <span class="sr-only">(current)</span>
                     </a>
@@ -238,7 +239,7 @@
 
             <div id="right_pane" class="split right">
                 <h4>Step by Step</h4>
-                <p>You will see the steps of every search you run</p>
+                <p>You will see the steps of every search you run </br>(Not Implemented Yet)</p>
             </div>
         </div>
     </div>
@@ -282,6 +283,7 @@
 <script type="text/javascript" src="scripts/FibonacciSearch.js"></script>
 <script type="text/javascript" src="scripts/StepButtons.js"></script>
 <script type="text/javascript" src="scripts/DragableContainer.js"></script>
+<script type="text/javascript" src="scripts/Manual.js"></script>
 
 </body>
 
