--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="resources/logo1.png"/> Implementation and use of Search in Visualized Environment</a>
+            <img src="resources/logo1.png"/> Visualized Environment for Search Methods</a>
         <button id="navBar_toggler" class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive"
                 aria-controls="navbarResponsive"
@@ -108,7 +108,7 @@
                             <img src="resources/ic_action_subject.png"/>
                         </td>
                         <td>
-                            <p>Development of an application for the Implemantation and use of search methods in a
+                            <p>Development of an application for the Implementation and use of search methods in a
                                 visualized environment
                             </p>
                         </td>
@@ -257,7 +257,8 @@
             <div class="float-right"><i class="material-icons right" style="font-size:24px">drag_handle</i></div>
         </div>
         <div class="dragable_container_content" id="dragable_container_step_content">
-            <p>You will see the steps of every search you run </br>(Not Implemented Yet)</p>
+            <p>You will see the steps of every search you run... <br>(Not Implemented Yet for <br>Exponential and
+                Fibonacci Searches)</p>
         </div>
     </div>
 
