--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
 
     <title>
-        MyThesis
+        Visualized Environment for Search Methods
     </title>
 
     <!--Favicon-->
@@ -21,10 +21,6 @@
     <!-- css sheet for how the page is laid out -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
-    <!--Scripts for Modal-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
     <style>
