i think i am done, only minor fixes if needed and view for mobile devices remaining

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -262,8 +262,7 @@
             <div class="float-right"><i class="material-icons right" style="font-size:24px">drag_handle</i></div>
         </div>
         <div class="dragable_container_content" id="dragable_container_step_content">
-            <p>You will see the steps of every search you run... <br>(Not Implemented Yet for
-                Fibonacci Search)</p>
+            <p>You will see the steps of every search you run...</p>
         </div>
     </div>
 
