clear button added

--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
                     <i class="material-icons">settings</i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                    <button class="dropdown-item" title="Clear the cells and start over" type="button" id="clear_button">
+                        Clear
+                    </button>
                     <button class="dropdown-item" title="Show/Hide Help" type="button" id="show_hide_manual">Show/Hide
                         Help
                     </button>
