--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
 
     <!--Favicon-->
-    <link rel="icon" type="image/png" href="resources/logo.png">
+    <link rel="icon" type="image/png" href="resources/logo1.png">
 
     <!--Bootstrap required Libraries-->
 
@@ -53,7 +53,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="index.html">
-            <img src="resources/logo1.png"/> Visualized Environment for Search Methods</a>
+            <img src="resources/logo1.png" style="width: 30px; height: 30px;"/> Visualized Environment for Search Methods</a>
         <button id="navBar_toggler" class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive"
                 aria-controls="navbarResponsive"
