--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
 
+    <!-- materialize -->
+    <!-- Compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+
+    <!-- Compiled and minified JavaScript -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+             -->
+
     <!-- Custom styles for this template -->
     <style>
         body {
@@ -231,55 +239,55 @@
                 <input class="form-control" min="0" max="9999" id="arraySize" type="number" placeholder="Specify Array Size (Default: 100)" />
                 <input class="form-control" min="0" max="9999" id="numbersRange" type="number" placeholder="Specify Numbers Range (Default: 300)" />
                 <div class="btn-group">
-                    <button type="button" id="generateNumbers" class="btn btn-info">Generate Numbers</button>
-                    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
+                    <button type="button" id="generateNumbers" class="btn btn-info waves-effect waves-light">Generate Numbers</button>
+                    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split waves-effect waves-light" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <div class="dropdown-menu">
-                        <button class="dropdown-item" type="button" id="exponential">Exponential Distribution</button>
-                        <button class="dropdown-item" type="button" id="logarithmic">Logarithmic Distribution</button>
-                        <button class="dropdown-item" type="button" id="geometric">Geometric Distribution</button>
+                        <button class="dropdown-item waves-effect waves-light" type="button" id="exponential">Exponential Distribution</button>
+                        <button class="dropdown-item waves-effect waves-light" type="button" id="logarithmic">Logarithmic Distribution</button>
+                        <button class="dropdown-item waves-effect waves-light" type="button" id="geometric">Geometric Distribution</button>
                     </div>
                 </div>
                 <input class="form-control" min="0" max="9999" id="searchingNumber" type="number" placeholder="Specify Searching Number" />
             </div>
 
             <div id="searchButtons" class="btn-group" role="group">
-                <button id="linearSearch" type="button" class="btn btn-secondary">Linear Search</button>
-                <button id="binarySearch" type="button" class="btn btn-secondary">Binary Search</button>
-                <button id="jumpSearch" type="button" class="btn btn-secondary">Jump Search</button>
-                <button id="interpolationSearch" type="button" class="btn btn-secondary">Interpolation Search</button>
-                <button id="exponentialSearch" type="button" class="btn btn-secondary">Exponential Search</button>
-                <button id="fibonacciSearch" type="button" class="btn btn-secondary">Fibonacci Search</button>
+                <button id="linearSearch" type="button" class="btn btn-secondary waves-effect waves-light">Linear Search</button>
+                <button id="binarySearch" type="button" class="btn btn-secondary waves-effect waves-light">Binary Search</button>
+                <button id="jumpSearch" type="button" class="btn btn-secondary waves-effect waves-light">Jump Search</button>
+                <button id="interpolationSearch" type="button" class="btn btn-secondary waves-effect waves-light">Interpolation Search</button>
+                <button id="exponentialSearch" type="button" class="btn btn-secondary waves-effect waves-light">Exponential Search</button>
+                <button id="fibonacciSearch" type="button" class="btn btn-secondary waves-effect waves-light">Fibonacci Search</button>
                 <!--<button id="stratosSearch" type="button" class="btn btn-secondary">Stratos Search</button>-->
             </div>
 
             <div id="stepButtons" class="btn-group" role="group">
                 <!-- <button id="undo" type="button" class="btn btn-outline-secondary" disabled>Undo Step</button> -->
                 <div class="btn-group" role="group">
-                    <button id="options" title="settings" type="button" class="btn btn-outline-secondary dropdown-toggle"
+                    <button id="options" title="settings" type="button" class="btn btn-outline-secondary dropdown-toggle waves-effect waves-light"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">settings</i>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                        <button class="dropdown-item" title="Clear the cells and start over" type="button" id="clear_button">
+                        <button class="dropdown-item waves-effect waves-light" title="Clear the cells and start over" type="button" id="clear_button">
                             Clear
                         </button>
-                        <button class="dropdown-item" title="Show/Hide Help" type="button" id="show_hide_manual">Show/Hide
+                        <button class="dropdown-item waves-effect waves-light" title="Show/Hide Help" type="button" id="show_hide_manual">Show/Hide
                             Help
                         </button>
-                        <button class="dropdown-item" title="Show/Hide Steps" type="button" id="show_hide_step">Show/Hide
+                        <button class="dropdown-item waves-effect waves-light" title="Show/Hide Steps" type="button" id="show_hide_step">Show/Hide
                             Steps
                         </button>
                     </div>
                 </div>
-                <button id="pause" title="Pause the method" type="button" class="btn btn-outline-secondary" disabled>Pause
+                <button id="pause" title="Pause the method" type="button" class="btn btn-outline-secondary waves-effect waves-light" disabled>Pause
                 </button>
-                <button id="next" title="One step at time" type="button" class="btn btn-outline-secondary" disabled>Next
+                <button id="next" title="One step at time" type="button" class="btn btn-outline-secondary waves-effect waves-light" disabled>Next
                     Step
                 </button>
-                <button id="skipForward" title="Press to Skip to the end" type="button" class="btn btn-outline-secondary"
+                <button id="skipForward" title="Press to Skip to the end" type="button" class="btn btn-outline-secondary waves-effect waves-light"
                     disabled>Skip Forward
                 </button>
                 <div id="slider">
