--- a/index.html
+++ b/index.html
@@ -310,15 +310,15 @@
                         </div>
                         <div class="col-sm">
                             Help Container
-                            <button type="button" class="btn btn-toggle" title="Toggle Help Container" id="show_hide_manual"
-                                data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <button type="button" class="btn btn-toggle active" title="Toggle Help Container" id="show_hide_manual"
+                                data-toggle="button" aria-pressed="true" autocomplete="off">
                                 <div class="handle"></div>
                             </button>
                         </div>
                         <div class="col-sm">
                             Steps Container
-                            <button type="button" class="btn btn-toggle" title="Toggle Steps Container" id="show_hide_step"
-                                data-toggle="button" aria-pressed="false" autocomplete="off">
+                            <button type="button" class="btn btn-toggle active" title="Toggle Steps Container" id="show_hide_step"
+                                data-toggle="button" aria-pressed="true" autocomplete="off">
                                 <div class="handle"></div>
                             </button>
                         </div>
